css/main.css
/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */

html {
    color: #FFF;
    font-size: 1em;
    line-height: 1.4;
}

::-moz-selection {
    background: #b3d4fc;
    text-shadow: none;
}

::selection {
    background: #b3d4fc;
    text-shadow: none;
}

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

textarea {
    resize: vertical;
}

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}


/* ===== Initializr Styles ==================================================
   Author: Jonathan Verrecchia - verekia.com/initializr/responsive-template
   ========================================================================== */

body {
    font: 16px/26px Helvetica, Helvetica Neue, Arial;
    background:#000;
}

.wrapper {
    width: 90%;
    margin: 0 5%;
}

/* ===================
    ALL: Orange Theme
   =================== */

.header-container {
    border-bottom: 20px solid #e44d26;
}

.footer-container,
.main aside {
    border-top: 20px solid #e44d26;
}

.header-container,
.footer-container,
.main aside {
    background: #f16529;
}

.title {
    color: white;
}

/* ==============
    MOBILE: Menu
   ============== */

nav ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

nav a {
    display: block;
    margin-bottom: 10px;
    padding: 15px 0;

    text-align: center;
    text-decoration: none;
    font-weight: bold;

    color: white;
    background: #e44d26;
}

nav a:hover,
nav a:visited {
    color: white;
}

nav a:hover {
    text-decoration: underline;
}

/* ==============
    MOBILE: Main
   ============== */

.main {
    padding: 30px 0;
}

.main article h1 {
    font-size: 2em;
    line-height: 1.3em;
}

.main aside {
    color: white;
    padding: 0px 5% 10px;
}

.footer-container footer {
    color: white;
    padding: 20px 0;
}

/* ===============
    ALL: IE Fixes
   =============== */

.ie7 .title {
    padding-top: 20px;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */

a {
    color:#fff;
    text-decoration:underline;
}

.slide {
    width:100%;
    /*height:100%;*/
    position:absolute;
    text-align:center;
}

.full-img{
    width:auto;
    height:auto;
    max-width:100%;
    /*max-height:100%;*/
    margin:0 auto;
}

.main-container{
    text-align:left;
}

.clear{
    opacity:0.0;
}

    /* z-indices */

    #slide-1, #credit{
        z-index:9;
    }
    #slide-2{
        z-index:8;
    }
    #slide-3{
        z-index:6;
        background:#AD6E1A;
        overflow:hidden;
    }
    #slide-4{
        z-index:7;
        overflow:hidden;
    }
    #credit{
        position: relative;
    }

#slide-4{
    height:100%;
    top:0;
    border:1px solid #f00;
}

#kepler{
    z-index:8;
    position:relative;
    margin:2em -2em -3em 0;
    text-align:right;
}

.lightning{
    position:absolute;
    z-index:10;
    width:216px;
    height:120px;
    /*left:-216px;
    top:-120px;*/
    left:-216px;
    top:0;
}

#credit {
    text-align:left;
    position:relative;
}

#credit h2{
    font-size:16px;
    line-height:26px;
    margin:0;
}

#credit p{
    margin:0;
}

#bubble {
    color:#999;
    position: relative;
    width: 90%;
    height:2em;
    padding: 1em;
    background: #DDD;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    text-align:left;
    z-index:10;
}

#bubble:after {
    content: '';
    position: absolute;
    border-style: solid;
    border-width: 15px 15px 0;
    border-color: #FFFFFF transparent;
    display: block;
    width: 0;
    z-index: 1;
    margin-left: -15px;
    bottom: -15px;
    left: 50%;
}

#bubble.offscreen{
    position:fixed;
    bottom:15px;
    top:auto;
    width:85%;
}

#bubble.offscreen:after {
    position: fixed;
    bottom: 0;
    left: 50%;
}

body{
    overflow-x:hidden;
}

/* ==========================================================================
   Media Queries
   ========================================================================== */

@media only screen and (min-width: 480px) {

}

@media only screen and (min-width: 680px) {
    footer div{
        width:50%;
        float:left;
    }
    #kepler{
        margin-top:0;
    }
    #bubble{
        position:absolute;
        width:100%;
        top:-4em;
    }

    /*offscreen bubble*/
    #bubble.offscreen{
        position:fixed;
        bottom:15px;
        top:auto;
        width:45%;
    }

    #bubble.offscreen:after {
        position: fixed;
        bottom: 0;
        left: 75%;
    }
}

@media only screen and (min-width: 1140px) {

/* ===============
    Maximal Width
   =============== */

    .wrapper {
        width: 1026px; /* 1140px - 10% for margins */
        margin: 0 auto;
    }
}

/* ==========================================================================
   Helper classes
   ========================================================================== */

.hidden {
    display: none !important;
    visibility: hidden;
}

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
}

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
}

.invisible {
    visibility: hidden;
}

.clearfix:before,
.clearfix:after {
    content: " ";
    display: table;
}

.clearfix:after {
    clear: both;
}

.clearfix {
    *zoom: 1;
}

/* ==========================================================================
   Print styles
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    img {
        max-width: 100% !important;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

